--- a/todo_app_flutter/pubspec.yaml
+++ b/todo_app_flutter/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_login: ^4.0.0
   serverpod_auth_email_flutter: ^0.9.9
   serverpod_auth_shared_flutter: ^0.9.9
+  serverpod_auth_google_flutter: ^0.9.9
 
 dev_dependencies:
   flutter_lints: ^1.0.4
